<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="찾아보기"
            android:textColor="@color/text_main"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/SelectOption_title"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <LinearLayout
        android:id="@+id/thema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard"
            android:text="@string/thema"
            android:textColor="@color/text_main"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spinner_thema"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/thema">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard"
            android:text="@string/difficulty"
            android:textColor="@color/text_main"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/difficulty_High"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_left"
                android:textColor="@color/text_main"
                android:text="상" />

            <Button
                android:id="@+id/difficulty_Middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_middle"
                android:text="중" />

            <Button
                android:id="@+id/difficulty_Low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_right"
                android:text="하" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/scary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard"
            android:text="@string/activity"
            android:textColor="@color/text_main"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/activity_High"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_left"
                android:textColor="@color/text_main"
                android:text="상" />
            <Button
                android:id="@+id/activity_Middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_middle"
                android:text="중" />
            <Button
                android:id="@+id/activity_Low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_right"
                android:text="하" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/scary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/difficulty">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard"
            android:text="@string/scary"
            android:textColor="@color/text_main"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/fear_High"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_left"
                android:textColor="@color/text_main"
                android:text="상" />
            <Button
                android:id="@+id/fear_Middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_middle"
                android:text="중" />
            <Button
                android:id="@+id/fear_Low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/option_selecteor_right"
                android:text="하" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/createOptionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btn_prev"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_strokerec_blu"
            android:textColor="@color/textblock_blu"

            android:text="이전으로" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rec_blu"
            android:textColor="@color/text_white"
            android:text="다음으로"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>